# investment-assistant-question-rl

./: .gitignore  README.md  pyproject.toml  requirements.txt
.ep_tmp/: ep_rft_dataset_4yrk5s30.jsonl  ep_rft_dataset_k4ittu3o.jsonl  ep_rft_dataset_m7y8251c.jsonl  ep_rft_dataset_mhbguwqr.jsonl  ep_rft_dataset_n0o3_f2r.jsonl  ep_rft_dataset_oudot9cb.jsonl  ep_rft_dataset_tmspdvap.jsonl  ep_rft_dataset_vmscjmtp.jsonl  ep_rft_dataset_x4_w_ggp.jsonl  ep_rft_dataset_z_fx3esm.jsonl
data/episodes/: pdd_supervised_dpo_task.json  pdd_supervised_grpo_task.json
data/raw/sec/0001737806/documents/20-F/0001104659-19-023251/: a19-5195_120f.htm.metadata.json
data/raw/sec/0001737806/documents/20-F/0001104659-20-051022/: pdd-20191231x20f.htm.metadata.json
data/raw/sec/0001737806/documents/20-F/0001104659-21-058237/: pdd-20201231x20f.htm.metadata.json
data/raw/sec/0001737806/documents/424B3/0000950127-23-000005/: prospectus_424_b.htm  (+1 more)
docs/: architecture.md  grpo_rl_fine_tuning_report.md  hackathon-resources.md  hackathon_submission.md  integration-with-investment-assistant.md  research-question-rubric.md
examples/: pdd_episode.jsonl
hud-investment/: env.py  pyproject.toml  tasks.py
schemas/: episode.schema.json
src/ia_question_rl/: __init__.py  baseline_policy.py  cli.py  ia_artifacts.py  inspect_hud.py  modal_grpo_trainer.py  modal_multiturn_grpo_trainer.py  models.py  prepare_grpo_dataset.py  reward.py  run_dpo_pipeline.py  run_grpo_pipeline.py  transcript_questions.py
tests/: test_ia_artifacts.py  test_pdd_rft.py  test_reward.py  test_transcript_questions.py
(+249 files in other folders)
